--- a/Repository.html
+++ b/Repository.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="resources/javascript/jquery-3.1.1.slim.min.js"></script>
 </head>
 <body>
 <p>HELLO</p>
+<script>
+    $('p').text('HELLO THEREE...');
+</script>
 </body>
 </html>
